# Incendie

./: .gitignore  CMakeLists.txt  README.md  foret.txt  main.c
Interface/: Foret.h  cellule.h  ihm.h  interface_utilisateur.h  simulation.h
implementation/: Foret.c  ihm.c  interface-utilisateur.c  simulation.c
